# votrans

./: .env  .gitignore  Cargo.toml  Dockerfile  build.rs  tg_client.py
api/: Cargo.toml
api/src/: lib.rs
bot/: Cargo.toml
bot/src/: bot_state.rs  helpers.rs  main.rs  markups.rs
server/: Cargo.toml
server/src/: app_data.rs  error.rs  helpers.rs  main.rs  routes.rs
src/: app_data.rs  error.rs  helpers.rs  main.rs  routes.rs
