[package]
name = "votrans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
hound = "3.5.1"
serde = { version = "1.0.188", features = ["derive"] }
vosk = "0.2.0"
ytd-rs = { version = "0.1.7", features = ["yt-dlp"] }
