[package]
name = "votrans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
axum = "*"
anyhow = "*"
hound = "*"
serde = { version = "*", features = ["derive"] }
vosk = "*"
ytd-rs = { version = "*", features = ["yt-dlp"] }
