[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "*"
teloxide = "*"
reqwest = { version = "*", features = ["json"] }
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
serde = { version = "*", features = ["derive"] }

api = { path = "../api" }
