[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
axum = "*"
hound = "*"
serde = { version = "*", features = ["derive"] }
vosk = "*"
youtube_dl = { version = "*", features = ["tokio"] }
