[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "*", features = ["multipart", "blocking", "json"] }
axum = { version = "*", features = ["multipart"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
youtube_dl = { version = "*", features = ["tokio"] }

api = { path = "../api" }
